tests/pending/neg/i7749.scala
trait A {
    def foo = 4
}
object B extends A {
    private[this] def foo = 0
}